# mlops-python-ambiente

./: README.md  data-preparation.csv  integrantes.md  pyproject.toml
Data/: Params.yaml  pyproject.toml
Data/data/raw/: Data Trabajo.xlsx  data_trabajo.csv
Data/src/: generate_data.py  main.py
Ejemplo_clase/: params.yaml  pyproject.toml
Ejemplo_clase/data/: pyproject.toml
Ejemplo_clase/data/raw/: session_data.csv
Ejemplo_clase/src/: config.py  generate_data.py
