[project]
name = "mlops-clasificador"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mlops_clasificador", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.16,<0.16.0)"
]
