[project]
name = "ejemplo-clase"
version = "0.1.0"
description = ""
authors = [
    {name = "FernandoB",email = "wfernandoblanco@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "mlflow (>=3.14.0,<4.0.0)",
    "pandas (<3)",
    "dvc (>=3.67.1,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
